Obstacle partially implemented

--- a/server/index.html
+++ b/server/index.html
@@ -286,19 +286,12 @@ I (Joram Brenz) just put it together and made it work with the MultiDroneCoordin
 				font-size: 18px; 
 				opacity: 0.7; 
 			}
-			.button_clear_tasks {
+			.clear_tasks {
 				height: 40px; 
 				width: 100%; 
 				font-size: 18px; 
 				opacity: 0.7; 
 				margin-top: 30px;
-			}
-			.button_delete_mission {
-				height: 40px; 
-				width: 100%; 
-				font-size: 18px; 
-				opacity: 0.7; 
-				color: red;
 			}
 			.hide {
 				display: none; 
@@ -373,29 +366,6 @@ I (Joram Brenz) just put it together and made it work with the MultiDroneCoordin
 				color: red;
 				z-index: 1001;
 			}
-			.pickupTask_weight_text {
-				position:absolute;
-				font-size: 20px;
-				z-index: 1001;
-			}
-			.pickupTask_weight_value {
-				position:absolute;
-				font-size: 20px;
-				top: 45%;
-				height: 50%;
-				width: 100%;
-				z-index: 1001;
-			}
-			.weight_box {
-				position:absolute;
-				top: 14%;
-				left: 78%;
-				height: 70px;
-				width: 100px;
-				z-index: 1001;
-				opacity: 0.7;
-				display: none;
-			}
 		</style>
 
 	</head>
@@ -413,13 +383,7 @@ I (Joram Brenz) just put it together and made it work with the MultiDroneCoordin
 			<input id="saveSearchTask" class="button_task hide" type="button" value="Save Search Task" onclick="saveSearchTask(); "/>
 			<input id="obstacle" class="button_task" type="button" value="Obstacle" onclick="setTask('obstacle'); " />
 			<input id="save_obstacle" class="button_task hide" type="button" value="Save Obstacle" onclick="saveObstacle(); "/>
-			<input id="clear_tasks" class="button_clear_tasks" type="button" value="Clear Tasks" onclick="clear_tasks();" />
-			<input id="delete_mission" class="button_delete_mission" type="button" value="Delete Mission" onclick="delete_mission();" />
-		</div>
-
-		<div id="weight_box" class="weight_box">
-			<div id="pickupTask_weight_text" class="pickupTask_weight_text">Weight (kg)</div>
-			<input id="pickupTask_weight_value" class="pickupTask_weight_value" type="input" value="10" />
+			<input id="clear_tasks" class="clear_tasks" type="button" value="Clear Tasks" onclick="clear_tasks();" />
 		</div>
 
 		<!--
@@ -528,7 +492,6 @@ I (Joram Brenz) just put it together and made it work with the MultiDroneCoordin
 			var startposmarker = L.marker([0,0]);
 			var startpos = null;
 			var lines = [];
-			var pickup_lines = []
 			var polygons = [];
 			var search_task = []; 
 			var search_markers = []; 
@@ -583,21 +546,6 @@ I (Joram Brenz) just put it together and made it work with the MultiDroneCoordin
 					startposmarker.remove();
 				}
 			}
-			function doPickupTask(npos) {
-				var newpos = npos
-				if (startpos == null) {
-					startposmarker.setLatLng(npos);
-					startposmarker.addTo(mymap);
-					startpos = npos;
-				}
-				else {
-					var line = L.polyline([startpos, npos], {color:'yellow'});
-					line.addTo(mymap);
-					pickup_lines.push(line);
-					startpos = null;
-					startposmarker.remove();
-				}
-			}
 			function doSearchTask(npos) {
 				var marker = L.marker(npos)
 				search_markers.push(marker)
@@ -627,8 +575,8 @@ I (Joram Brenz) just put it together and made it work with the MultiDroneCoordin
 				if(latlngs.length > 3) {
 					//red_lines.push(L.polyline(latlngs, {color: 'red'}).addTo(mymap))
 					obstacle = createRectangle();
-					obstacles.push(L.polygon(obstacle, {color: "red"}).addTo(mymap))		
-					clear_markers()
+					obstacles.push(obstacle)		
+					//clear_markers()
 					setTask("none")
 				}
 				else {
@@ -735,14 +683,20 @@ I (Joram Brenz) just put it together and made it work with the MultiDroneCoordin
 				//Index 1 = Search Tasks
 				tasks['search'] = search_task;
 				//Index 2 = obstacles
-				tasks['obstacle'] = obstacles;
+				tasks['obstacles'] = obstacles;
+			
+				console.log(obstacles)
+				console.log(search_task)
+
 				console.log("JSON: " + tasks)
 				ws.send(JSON.stringify([0, tasks]));
+
 				//Clear search_task
 				search_task = []
+
 				add_permanent_markers()
-				
 			}
+
 			function setTask(task) {
 				console.log("Setting task: " + task)
 				clear_markers()
@@ -755,7 +709,6 @@ I (Joram Brenz) just put it together and made it work with the MultiDroneCoordin
 						document.getElementById("save_obstacle").style.display="none"; 
 						document.getElementById("lineTask").style.boxShadow = "0 1px 5px blue";
 						document.getElementById("pickupTask").style.boxShadow = "none";
-						document.getElementById("weight_box").style.display="none"; 
 						break
 					case "search":
 						document.getElementById("searchTask").style.display="none"; 
@@ -764,7 +717,6 @@ I (Joram Brenz) just put it together and made it work with the MultiDroneCoordin
 						document.getElementById("save_obstacle").style.display="none"; 
 						document.getElementById("lineTask").style.boxShadow = "none";
 						document.getElementById("pickupTask").style.boxShadow = "none";
-						document.getElementById("weight_box").style.display="none"; 
 						break
 					case "pickup":
 						document.getElementById("searchTask").style.display="block"; 
@@ -773,7 +725,6 @@ I (Joram Brenz) just put it together and made it work with the MultiDroneCoordin
 						document.getElementById("save_obstacle").style.display="none"; 
 						document.getElementById("pickupTask").style.boxShadow = "0 1px 5px blue";
 						document.getElementById("lineTask").style.boxShadow = "none";
-						document.getElementById("weight_box").style.display="block"; 
 						break
 					case "none":
 						document.getElementById("searchTask").style.display="block"; 
@@ -782,7 +733,6 @@ I (Joram Brenz) just put it together and made it work with the MultiDroneCoordin
 						document.getElementById("save_obstacle").style.display="none"; 
 						document.getElementById("pickupTask").style.boxShadow = "none";
 						document.getElementById("lineTask").style.boxShadow = "none";
-						document.getElementById("weight_box").style.display="none"; 
 						break
 					case "obstacle":
 						document.getElementById("searchTask").style.display="block"; 
@@ -791,7 +741,6 @@ I (Joram Brenz) just put it together and made it work with the MultiDroneCoordin
 						document.getElementById("save_obstacle").style.display="block"; 
 						document.getElementById("pickupTask").style.boxShadow = "none";
 						document.getElementById("lineTask").style.boxShadow = "none";
-						document.getElementById("weight_box").style.display="none"; 
 						break
 				} 
 				
@@ -1079,9 +1028,17 @@ I (Joram Brenz) just put it together and made it work with the MultiDroneCoordin
 			}
 
 			function clear_tasks() {
+				startposmarker.remove();
+				startposmarker = L.marker([0,0]);
+				startpos = null;
+				latlngs = []; 
 				while (lines.length) {
 					var line = lines.pop();
 					line.remove();
+				}
+				while (search_markers.length) {
+					marker = search_markers.pop()
+					marker.remove();
 				}
 				while (polygons.length) {
 					polygon = polygons.pop()
@@ -1094,7 +1051,6 @@ I (Joram Brenz) just put it together and made it work with the MultiDroneCoordin
 					line = red_lines.pop()
 					line.remove();
 				}
-				clear_markers()
 			}
 
 			function add_permanent_markers() {
@@ -1124,23 +1080,6 @@ I (Joram Brenz) just put it together and made it work with the MultiDroneCoordin
 
 			function sleep(s) {
 				return new Promise(resolve => setTimeout(resolve, s*1000));
-			}
-
-			function delete_mission() {
-				while (permanent_lines.length) {
-					line = permanent_lines.pop()
-					line.remove()
-				}
-				while (permanent_polygons.length) {
-					polygon = permanent_polygons.pop()
-					polygon.remove()
-				}
-				while (permanent_red_lines.length) {
-					line = permanent_lines.pop()
-					line.remove()
-				}
-				ws.send(JSON.stringify([5]));
-				clear_tasks()
 			}
 
 			init();
